<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity"
    android:background="@color/blue"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/iconapp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingLeft="25dp"
        android:layout_marginTop="60dp"
        />

    <TextView
        android:id="@+id/nameshapeText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/edittextback"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/gray"


        />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/edittextback"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/gray"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:text="@string/reg"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        />


</LinearLayout>